feat: aadd endpoint to add document in a chat
