# api/internal/domain/document.go
@@ -1,0 +1,7 @@
+package domain
+
+type Document struct {
+	ID   string `json:"id"`
+	Name string `json:"name"`
+	URL  string `json:"url"`
+}
